# dull

./: .clang-tidy  .gitignore  CMakeLists.txt  PKGBUILD  README.md
src/: common.h  crypto.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  vault.cc  vault.h
